@@ -1,3 +1,9 @@
+Thu Mar 17 15:07:19 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * dance/LocalityManager/Handler/LocalityActivator_Impl.cpp:
+
+          Fuzz.
+
 Thu Mar 17 04:48:06 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * dance/Logger/Log_Macros.h:
